kubernetes/dev-local/testserver.yaml
---
# Source: testserver/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testserver
  labels:
    helm.sh/chart: testserver-0.9.51
    app.kubernetes.io/name: testserver
    app.kubernetes.io/instance: testserver
    app.kubernetes.io/version: "0.9.70"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: testserver
    app.kubernetes.io/instance: testserver
---
# Source: testserver/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testserver
  labels:
    helm.sh/chart: testserver-0.9.51
    app.kubernetes.io/name: testserver
    app.kubernetes.io/instance: testserver
    app.kubernetes.io/version: "0.9.70"
    app.kubernetes.io/managed-by: Helm
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: testserver
      app.kubernetes.io/instance: testserver
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: testserver
        app.kubernetes.io/instance: testserver
    spec:
      serviceAccountName: testserver
      securityContext:
        {}

      containers:
        - name: testserver
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "cgerull/testserver:0.9.70"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: instance
              mountPath: /home/web/instance
            - name: testsecret
              mountPath: /run/secret/my-secret
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http

          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 72Mi
      volumes:
        - name: tmp
          emptyDir: {}
        - name: instance
          emptyDir: {}
        - name: testsecret
          secret:
            secretName: testserver
---
# Source: testserver/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testserver
  labels:
    helm.sh/chart: testserver-0.9.51
    app.kubernetes.io/name: testserver
    app.kubernetes.io/instance: testserver
    app.kubernetes.io/version: "0.9.70"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - "testserver.dev.gerull.nl"
      secretName: testserver-tls
  rules:
    - host: "testserver.dev.gerull.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testserver
                port:
                  number: 80
